--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/de_DE/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/de_DE/openmediavault-shairport.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
-# Volker <votdev@gmx.de>, 2014-2015
+# Volker <votdev@gmx.de>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-10-31 15:27+0000\n"
+"POT-Creation-Date: 2016-09-24 14:43+0200\n"
+"PO-Revision-Date: 2016-09-24 12:46+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -42,5 +42,7 @@ msgstr "Einstellungen"
 msgid "Shairport"
 msgstr "Shairport"
 
-msgid "The name the service will advertise to iTunes."
-msgstr "Der Name welchen der Dienst an iTunes annonciert."
+msgid ""
+"The name the service will advertise to iTunes. Leave this field empty to use"
+" the hostname by default."
+msgstr "Der Name welchen der Dienst an iTunes annonciert. Lassen Sie dieses Feld leer um denn Hostnamen zu verwenden."
