--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/el_GR/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/el_GR/openmediavault-shairport.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
 # Kostas Moho <kgounaris@hotmail.com>, 2014-2015
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-11-21 11:25+0000\n"
-"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
+"POT-Creation-Date: 2016-09-24 14:43+0200\n"
+"PO-Revision-Date: 2016-09-24 12:44+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,5 +42,7 @@ msgstr "Ρυθμίσεις"
 msgid "Shairport"
 msgstr "Shairport"
 
-msgid "The name the service will advertise to iTunes."
-msgstr "Το όνομα που θα εμφανίζει η υπηρεσία στο iTunes."
+msgid ""
+"The name the service will advertise to iTunes. Leave this field empty to use"
+" the hostname by default."
+msgstr ""
