--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/openmediavault-shairport.pot
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/openmediavault-shairport.pot
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-shairport package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-shairport\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
+"POT-Creation-Date: 2016-09-24 14:43+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -41,5 +41,5 @@ msgstr ""
 msgid "Shairport"
 msgstr ""
 
-msgid "The name the service will advertise to iTunes."
+msgid "The name the service will advertise to iTunes. Leave this field empty to use the hostname by default."
 msgstr ""
