--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/pt_PT/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/pt_PT/openmediavault-shairport.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
 # Nelson Rosado <nelsontrosado@gmail.com>, 2014
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-10-31 15:24+0000\n"
+"POT-Creation-Date: 2016-09-24 14:43+0200\n"
+"PO-Revision-Date: 2016-09-24 12:44+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/votdev/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
@@ -42,5 +42,7 @@ msgstr "Definições"
 msgid "Shairport"
 msgstr "Shairport"
 
-msgid "The name the service will advertise to iTunes."
+msgid ""
+"The name the service will advertise to iTunes. Leave this field empty to use"
+" the hostname by default."
 msgstr ""
