--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/it_IT/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/it_IT/openmediavault-netatalk.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # maurorulli <mauro.rulli@gmail.com>, 2012
-# Paolo Velati <paolo.velati@gmail.com>, 2013-2015
+# Paolo Velati <paolo.velati@gmail.com>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-09-23 21:57+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -65,7 +65,7 @@ msgid "Enable user home directories."
 msgstr "Abilita directory home per l'utente."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Abilitato"
 
 msgid "Extra options"
 msgstr "Opzioni extra"
@@ -119,7 +119,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Per favore consulta la <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>pagina del manuale</a> per ulteriori dettagli."
 
 msgid "Quota"
 msgstr "Quota"
