* Update locales. * Modify info text in UI.

--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/cs_CZ/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/cs_CZ/openmediavault-shairport.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-24 14:43+0200\n"
-"PO-Revision-Date: 2016-09-24 12:44+0000\n"
+"POT-Creation-Date: 2016-09-24 19:04+0200\n"
+"PO-Revision-Date: 2016-09-24 17:04+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -43,6 +43,6 @@ msgid "Shairport"
 msgstr "Shairport"
 
 msgid ""
-"The name the service will advertise to iTunes. Leave this field empty to use"
-" the hostname by default."
+"The name the service will advertise to clients. Leave this field empty to "
+"use the hostname by default."
 msgstr ""
