--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/openmediavault-shairport.pot
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/openmediavault-shairport.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-shairport\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-24 14:43+0200\n"
+"POT-Creation-Date: 2016-09-24 19:04+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -41,5 +41,5 @@ msgstr ""
 msgid "Shairport"
 msgstr ""
 
-msgid "The name the service will advertise to iTunes. Leave this field empty to use the hostname by default."
+msgid "The name the service will advertise to clients. Leave this field empty to use the hostname by default."
 msgstr ""
