--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/no_NO/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/no_NO/openmediavault-shairport.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-24 14:43+0200\n"
-"PO-Revision-Date: 2016-09-24 12:44+0000\n"
+"POT-Creation-Date: 2016-09-24 19:04+0200\n"
+"PO-Revision-Date: 2016-09-24 17:04+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Norwegian (http://www.transifex.com/votdev/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
@@ -42,6 +42,6 @@ msgid "Shairport"
 msgstr ""
 
 msgid ""
-"The name the service will advertise to iTunes. Leave this field empty to use"
-" the hostname by default."
+"The name the service will advertise to clients. Leave this field empty to "
+"use the hostname by default."
 msgstr ""
