--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (3.1.3) stable; urgency=low
+
+  * Harden installation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Sep 2016 13:49:18 +0200
+
 openmediavault-forkeddaapd (3.1.2) stable; urgency=low
 
   * Various improvements.
