--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-iscsitarget (3.1.3) stable; urgency=low
+
+  * Update locales.
+  * Harden installation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Sep 2016 13:54:17 +0200
+
 openmediavault-iscsitarget (3.1.2) stable; urgency=low
 
   * Update locales.
