--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.2) stable; urgency=low
+
+  * Harden installation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Sep 2016 12:39:53 +0200
+
 openmediavault-netatalk (3.2.1) stable; urgency=low
 
   * Update locales.
