--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (3.2.3) stable; urgency=low
+
+  * Harden installation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Sep 2016 14:08:48 +0200
+
 openmediavault-shairport (3.2.2) stable; urgency=low
 
   * Update locales.
