--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.41) stable; urgency=low
+
+  * Fix bug in omv-firstaid.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Sep 2016 12:42:50 +0200
+
 openmediavault (3.0.40) stable; urgency=low
 
   * Harden installation script.
