--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-ldap (3.1.3) stable; urgency=low
+
+  * All empty credentials.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 30 Sep 2016 15:04:37 +0200
+
 openmediavault-ldap (3.1.2) stable; urgency=low
 
   * Harden installation script.
