--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-usbbackup (3.2.11) stable; urgency=low
+
+  * Update locales.
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 03 Oct 2016 19:37:31 +0200
+
 openmediavault-usbbackup (3.2.10) stable; urgency=low
 
   * Harden installation script.
