--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/cs_CZ/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/cs_CZ/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-09-29 20:26+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr "Přidat zálohovací úlohu"
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr "E-mail, obsahující výstup z příkazu (pokud nějaký vznikl), byl odeslán správci systému."
+msgstr "Výstup z příkazu (pokud nějaký vznikl) je e-mailem odeslán správci systému."
 
 msgid "Archive"
 msgstr "Archiv"
@@ -45,7 +45,7 @@ msgid "Delete"
 msgstr "Smazat"
 
 msgid "Delete files on the receiving side that don't exist on sender."
-msgstr "Smazat ty soubory v cíli, které neexistují na zdroji."
+msgstr "V cíli smazat ty soubory, které neexistují na straně zdroje."
 
 msgid "Device"
 msgstr "Zařízení"
@@ -54,18 +54,18 @@ msgid "Edit backup job"
 msgstr "Upravit zálohovací úlohu"
 
 msgid "Enable"
-msgstr "Povolit"
+msgstr "Zapnout"
 
 msgid "Enable archive mode."
-msgstr "Povolit archivní režim"
+msgstr "Zapnout archivní režim."
 
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr "Tuto volbu zapněte, pokud si přejete zachovávat i jen částečně přenesené soubory. V opačném případě budou takové soubory v případě přerušení přenosu mazány."
+msgstr "Tuto volbu zapněte, pokud si přejete zachovávat i ty přijaté soubory, jejichž přenos nebyl úspěšně dokončen a část dat v nich tak chybí. Takové jinak budou v případě přerušení přenosu mazány."
 
 msgid "Enabled"
-msgstr "Povoleno"
+msgstr "Zapnuto"
 
 msgid "Execute backup job"
 msgstr "Spustit zálohovací úlohu"
@@ -74,7 +74,7 @@ msgid "External storage device"
 msgstr "Vnější úložné zařízení"
 
 msgid "Extra options"
-msgstr "Další možnosti"
+msgstr "Rozšířené předvolby"
 
 msgid "From external storage to shared folder"
 msgstr "Z vnějšího úložiště na sdílenou složku"
@@ -83,7 +83,7 @@ msgid "From shared folder to external storage"
 msgstr "Ze sdílené složky na vnější úložiště"
 
 msgid "Keep partially transferred files"
-msgstr "Zachovat částečně přenesené soubory"
+msgstr "Zachovat i jen částečně přenesené soubory"
 
 msgid "Mode"
 msgstr "Režim"
@@ -91,7 +91,7 @@ msgstr "Režim"
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti viz <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>manuálová stránka</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>manuálové stránce</a>."
 
 msgid ""
 "Please note that the web interface is blocked until the manually started "
@@ -127,7 +127,7 @@ msgid "Scan"
 msgstr "Skenovat"
 
 msgid "Select a device ..."
-msgstr "Vyberte zařízení..."
+msgstr "Vyberte zařízení…"
 
 msgid "Send command output via email."
 msgstr "Zaslat výstup příkazu e-mailem."
