--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-ldap (3.1.3) stable; urgency=low
 
+  * Update locales.
   * All empty credentials.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 30 Sep 2016 15:04:37 +0200
