--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/cs_CZ/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/cs_CZ/openmediavault-ldap.po
@@ -4,13 +4,13 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-04-26 17:55+0000\n"
+"PO-Revision-Date: 2016-09-29 20:17+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -29,19 +29,19 @@ msgid "Enable"
 msgstr "Zapnout"
 
 msgid "Enable PAM"
-msgstr "Zapnout infrastrukturu ověřování PAM"
+msgstr "Používat ověřovací infrastrukturu PAM"
 
 msgid "Enable SSL/TLS"
-msgstr "Zapnout SSL/TLS šifrování"
+msgstr "Používat SSL/TLS šifrování"
 
 msgid "Enable secure connection."
-msgstr "Zapnout zabezpečené spojení."
+msgstr "Používat zabezpečené spojení."
 
 msgid "Extra client options"
-msgstr "Další volby klienta"
+msgstr "Rozšířené předvolby pro klienta"
 
 msgid "Extra options"
-msgstr "Další možnosti"
+msgstr "Rozšířené předvolby"
 
 msgid "General settings"
 msgstr "Obecná nastavení"
@@ -58,15 +58,15 @@ msgstr "Heslo"
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/ldap.conf' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Další podrobnosti jsou uvedeny v <a href='http://linux.die.net/man/5/ldap.conf' target='_blank'>manuálové stránce</a>."
+msgstr "Další podrobnosti naleznete v <a href='http://linux.die.net/man/5/ldap.conf' target='_blank'>manuálové stránce</a>."
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Více podrobností naleznete v <a href='http://linux.die.net/man/5/nss_ldap' target='_blank'>manuálové stránce</a>."
+msgstr "Další podrobnosti naleznete v <a href='http://linux.die.net/man/5/nss_ldap' target='_blank'>manuálové stránce</a>."
 
 msgid "Root Bind DN"
-msgstr "Kořenové spojovací DN"
+msgstr "Kořen spojovacího rozlišeného názvu (DN)"
 
 msgid "Settings"
 msgstr "Nastavení"
@@ -74,27 +74,27 @@ msgstr "Nastavení"
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
 "'dc=example,dc=net'."
-msgstr "Určuje základní rozlišený název (DN), sloužící jako základ pro hledání, např. \"dc=example,dc=net\"."
+msgstr "Určuje základní rozlišený název (DN), sloužící jako základ pro hledání, např. „dc=example,dc=net“."
 
 msgid "Specifies the credentials with which to bind."
-msgstr "Určuje údaje, sloužící k přihlášení."
+msgstr "Určuje přihlašovací údaje, sloužící pro spojení."
 
 msgid ""
 "Specifies the distinguished name (DN) with which to bind to the directory "
 "server for lookups, e.g. 'cn=manager,dc=example,dc=net'."
-msgstr "Určuje rozlišené jméno (DN), kterým se spojovat s adresářovým serverem pro vyhledávání, např. cn=manager,dc=example,dc=net."
+msgstr "Určuje rozlišené jméno (DN), kterým se spojovat s adresářovým serverem pro vyhledávání, např. „cn=manager,dc=example,dc=net“."
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
-msgstr "Určuje příponu skupiny, např. \"ou=Groups\"."
+msgstr "Určuje příponu skupiny, např. „ou=Groups“."
 
 msgid "Specifies the port to connect to."
 msgstr "Určuje port ke kterému se připojit."
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
-msgstr "Určuje příponu uživatele, např. \"ou=Users\"."
+msgstr "Určuje příponu uživatele, např. „ou=Users“."
 
 msgid "The FQDN or IP address of the server."
-msgstr "Úplný doménový název (FQDN) či IP adresa serveru."
+msgstr "Úplný doménový název (FQDN) případně IP adresa serveru."
 
 msgid ""
 "Use LDAP for authentication system-wide along with other authentication "
