Harden SMB shares.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.41) stable; urgency=low
 
+  * Harden SMB/CIFS shares.
   * Fix bug in omv-firstaid.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Sep 2016 12:42:50 +0200
