--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.11) stable; urgency=low
+
+  * Mantis 0001610: omv_escapeshellarg truncates path after space.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 04 Oct 2016 23:39:17 +0200
+
 openmediavault (2.2.10) stable; urgency=low
 
   * Various improvements.
