--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/cs_CZ/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/cs_CZ/openmediavault-ldap.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-09-29 20:17+0000\n"
+"PO-Revision-Date: 2016-10-05 10:06+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgid "Enable SSL/TLS"
 msgstr "Používat SSL/TLS šifrování"
 
 msgid "Enable secure connection."
-msgstr "Používat zabezpečené spojení."
+msgstr "Používat šifrované spojení."
 
 msgid "Extra client options"
 msgstr "Rozšířené předvolby pro klienta"
@@ -99,7 +99,7 @@ msgstr "Úplný doménový název (FQDN) případně IP adresa serveru."
 msgid ""
 "Use LDAP for authentication system-wide along with other authentication "
 "sources."
-msgstr "Současně s dalšími systémy ověřování použít v rámci celého systému též LDAP protokol."
+msgstr "Současně s dalšími systémy ověřování použít v rámci celého systému také LDAP protokol."
 
 msgid "Users suffix"
 msgstr "Přípona uživatelů"
