--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/cs_CZ/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/cs_CZ/openmediavault-usbbackup.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-09-29 20:26+0000\n"
+"PO-Revision-Date: 2016-10-05 14:19+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -77,7 +77,7 @@ msgid "Extra options"
 msgstr "Rozšířené předvolby"
 
 msgid "From external storage to shared folder"
-msgstr "Z vnějšího úložiště na sdílenou složku"
+msgstr "Z vnějšího úložiště do sdílené složky"
 
 msgid "From shared folder to external storage"
 msgstr "Ze sdílené složky na vnější úložiště"
@@ -97,7 +97,7 @@ msgid ""
 "Please note that the web interface is blocked until the manually started "
 "backup job has been finished. However the backup job is automatically "
 "executed in the background when the storage device is connected to the host."
-msgstr "Nezapomeňte, že do doby než bude dokončeno, ručně spuštěné zálohování znepřístupní webové rozhraní. Oproti tomu samočinně spuštěné zálohování (připojením vnějšího úložného zařízení) poběží na pozadí a webové rozhraní tak blokovat nebude."
+msgstr "Nezapomeňte, že do doby než bude dokončeno, ručně spuštěné zálohování znepřístupní webové rozhraní. Oproti tomu automaticky spuštěné zálohování (připojením vnějšího úložného zařízení) bude spuštěné na pozadí a webové rozhraní tak blokovat nebude."
 
 msgid "Preserve ACLs"
 msgstr "Zachovat ACL práva"
@@ -155,7 +155,7 @@ msgid ""
 "The shared folder content is synchronised from/to the root of the external "
 "storage device if this option is not set. The name of the directory is taken"
 " from the shared folder."
-msgstr "Obsah sdílené složky je synchronizován z/do kořenové složky vnejšího úložného zařízení, pokud tato volba není nastavena. Název složky je převzata od sdílené složky."
+msgstr "Obsah sdílené složky je synchronizován z/do kořenové složky vnějšího úložného zařízení, pokud tato volba není nastavena. Název složky je převzatý od sdílené složky."
 
 msgid ""
 "The shared folder to synchronise when the external storage device is "
