--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/cs_CZ/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/cs_CZ/openmediavault-clamav.po
@@ -4,13 +4,13 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-11-20 16:08+0000\n"
+"PO-Revision-Date: 2016-10-04 06:13+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -23,18 +23,18 @@ msgid "Add job"
 msgstr "Přidat úlohu"
 
 msgid "Algorithmic detection"
-msgstr "Algoritmické zjištění"
+msgstr "Zjišťování na základě algoritmu"
 
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr "E-mail, obsahující výstup z příkazu (pokud nějaký vznikl), byl odeslán správci systému."
+msgstr "Výstup z příkazu (pokud nějaký vznikl) je e-mailem odeslán správci systému."
 
 msgid "Antivirus"
 msgstr "Antivirus"
 
 msgid "Be verbose."
-msgstr "Obsáhlejší výstup."
+msgstr "Uvádět ve výstupu více podrobností."
 
 msgid "Comment"
 msgstr "Komentář"
@@ -43,7 +43,7 @@ msgid "Database checks"
 msgstr "Četnost kontrol databáze"
 
 msgid "Date & Time"
-msgstr "Datum & čas"
+msgstr "Datum a čas"
 
 msgid "Day of month"
 msgstr "Den v měsíci"
@@ -52,7 +52,7 @@ msgid "Day of week"
 msgstr "Den v týdnu"
 
 msgid "Detect PUA"
-msgstr "Zjišťovat PUA"
+msgstr "Zjišťovat potenciálně nežádoucí aplikace (PUA)"
 
 msgid "Detect broken executables"
 msgstr "Zjišťovat poškozené spustitelné soubory"
@@ -61,39 +61,39 @@ msgid "Edit job"
 msgstr "Upravit úlohu"
 
 msgid "Enable"
-msgstr "Povolit"
+msgstr "Zapnout"
 
 msgid "Enable HTML detection and normalisation."
-msgstr "Povolit zjišťování a normalizaci HTML"
+msgstr "Zapnout zjišťování a normalizaci HTML."
 
 msgid "Enable archive scanning."
-msgstr "Povolit kontrolu archivů"
+msgstr "Zapnout kontrolu archivů."
 
 msgid "Enable on-access virus scanning"
-msgstr "Povolit hledávání virů při přístupu (on-access)"
+msgstr "Při jejich otevírání, hledat v souborech viry"
 
 msgid "Enable scanning of ELF files."
-msgstr "Povolit kontrolu ELF (spustitelných) souborů."
+msgstr "Zapnout kontrolu ELF (spustitelných) souborů."
 
 msgid ""
 "Enable scanning of OLE2 files, such as Microsoft Office documents and .msi "
 "files."
-msgstr "Povolit kontrolu OLE2 souborů, jako jsou dokumenty Microsoft Office a .msi soubory."
+msgstr "Zapnout kontrolu OLE2 souborů, jako jsou dokumenty Microsoft Office a .msi soubory."
 
 msgid "Enable scanning within PDF files."
-msgstr "Povolit kontrolu v PDF souborech."
+msgstr "Zapnout kontrolu PDF souborů."
 
 msgid "Enable the algorithmic detection."
-msgstr "Povolit algoritmickou detekci."
+msgstr "Zapnout zjišťování na základě algoritmu."
 
 msgid "Enable the detection of broken executables (both PE and ELF)."
-msgstr "Povolit rozpoznávání poškozených spustitelných souborů (PE i ELF)."
+msgstr "Zapnout rozpoznávání poškozených spustitelných souborů (PE i ELF)."
 
 msgid "Enable the detection of possibly unwanted applications."
-msgstr "Povolit detekci potenciálně nechtěných aplikací."
+msgstr "Zapnout zjišťování potenciálně nechtěných aplikací."
 
 msgid "Enabled"
-msgstr "Povolené"
+msgstr "Zapnuté"
 
 msgid "Every N day of month"
 msgstr "Každý N-tý den v měsíci"
@@ -105,10 +105,10 @@ msgid "Every N minute"
 msgstr "Každých N minut"
 
 msgid "Execute cron job"
-msgstr "Spustit cron úlohu"
+msgstr "Spustit naplánovanou (cron) úlohu"
 
 msgid "Extra options"
-msgstr "Další možnosti"
+msgstr "Rozšířené předvolby"
 
 msgid "Follow directory symlinks"
 msgstr "Následovat odkazy na složky"
@@ -135,10 +135,10 @@ msgid "Jobs"
 msgstr "Úlohy"
 
 msgid "Log clean files"
-msgstr "V záznamu protokolu uvádět i čisté soubory"
+msgstr "V záznamu událostí uvádět i čisté soubory"
 
 msgid "Log clean files. This drastically increases the log size."
-msgstr "Zaznamenávat do protokolu i čisté soubory. Pozor - opravdu výrazně zvětší velikost souboru s protokolem."
+msgstr "Zaznamenávat do protokolu i čisté soubory. Pozor – opravdu výrazně zvětší velikost souboru se záznamem událostí."
 
 msgid "Message"
 msgstr "Zpráva"
@@ -147,7 +147,7 @@ msgid "Minute"
 msgstr "Minuta"
 
 msgid "Monitor the shared folder and scan new or modified files."
-msgstr "Sledovat sdílené složky a kontrolovat nové nebo upravené soubory."
+msgstr "Sledovat sdílenou složku a kontrolovat nové nebo upravené soubory."
 
 msgid "Month"
 msgstr "Měsíc"
@@ -156,7 +156,7 @@ msgid "Multiscan"
 msgstr "Souběžné skenování více souborů/složek naráz"
 
 msgid "Number of database update checks per day. Set to 0 to disable."
-msgstr "Kolikrát za den aktualizovat databázi. Nastavení na 0 (nula) zakáže samočinnou aktualizaci."
+msgstr "Kolikrát za den aktualizovat databázi. Nastavení na 0 (nula) automatickou aktualizaci vypne."
 
 msgid "On-access"
 msgstr "Při přístupu (on-access)"
@@ -194,13 +194,13 @@ msgid "Scan archives"
 msgstr "Kontrolovat archivy"
 
 msgid "Scan the directory contents in parallel using available threads."
-msgstr "Kontrolovat obsah složky paralelně s využitím dostupných vláken."
+msgstr "Kontrolovat obsah složky paralelně využitím dostupných vláken."
 
 msgid "Send command output via email"
 msgstr "Odeslat výstup příkazu e-mailem"
 
 msgid "Send email"
-msgstr "Odeslat email"
+msgstr "Odeslat e-mail"
 
 msgid "Settings"
 msgstr "Nastavení"
