--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-01 07:56+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr "Přidat fyzický svazek"
 msgid ""
 "After the logical volume has been extended you can resize the containing "
 "filesystem."
-msgstr "Poté, co byl logický svazek rozšířen, je možné zvětšit i souborový systém, který nese. "
+msgstr "Po zvětšení logického svazku je možné zvětšit také v něm obsažený souborový systém."
 
 msgid "Available"
 msgstr "K dispozici"
@@ -69,13 +69,13 @@ msgid "Edit volume group"
 msgstr "Upravit skupinu svazků"
 
 msgid "Extend"
-msgstr "Rozšířit"
+msgstr "Zvětšit"
 
 msgid "Extend logical volume"
-msgstr "Rozšířit logický svazek"
+msgstr "Zvětšit logický svazek"
 
 msgid "Extend volume group"
-msgstr "Rozšířit skupinu svazků"
+msgstr "Zvětšit skupinu svazků"
 
 msgid "Free"
 msgstr "Volné"
@@ -93,10 +93,10 @@ msgid "Name"
 msgstr "Název"
 
 msgid "No free space available to create a logical volume."
-msgstr "Pro vytvoření logického svazku již nezbývá žádné volné místo."
+msgstr "Pro vytvoření logického svazku už nezbývá žádné volné místo."
 
 msgid "No free space available to extend the logical volume."
-msgstr "Pro zvětšení logického svazku již nezbývá žádné volné místo."
+msgstr "Pro zvětšení logického svazku už nezbývá žádné volné místo."
 
 msgid "Physical volumes"
 msgstr "Fyzické svazky"
@@ -111,10 +111,10 @@ msgid "Resize"
 msgstr "Změnit velikost"
 
 msgid "Select a volume group ..."
-msgstr "Vybrat skupinu svazků (vg)..."
+msgstr "Vybrat skupinu svazků (vg)…"
 
 msgid "Select an device ..."
-msgstr "Vyberte zařízení..."
+msgstr "Vyberte zařízení…"
 
 msgid "Size"
 msgstr "Velikost"
