--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/cs_CZ/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/cs_CZ/openmediavault-netatalk.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-04 06:15+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,28 +25,28 @@ msgid "Advanced settings"
 msgstr "Pokročilá nastavení"
 
 msgid "Allow guest login."
-msgstr "Povolit přihlášení hosta."
+msgstr "Umožnit přihlašování bez účtu (host)."
 
 msgid "Allow guests to create or modify files."
-msgstr "Umožnit hostům vytvářet nové a upravovat obsah stávajících souborů"
+msgstr "Umožnit nepřihlášeným uživatelům (hostům) vytvářet nové a upravovat obsah stávajících souborů."
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr "Umožnit přihlašování hesly přenášenými nešifrovaně (nezabezpečeně)."
+msgstr "Umožnit přihlašování nezabezpečeně (nešifrovaně) přenášenými hesly."
 
 msgid "Allow plain passwords"
-msgstr "Povolit hesla v holém textu"
+msgstr "Umožnit používání hesel v přímo čitelné (plain) podobě"
 
 msgid "Apple Filing"
 msgstr "Apple Filing"
 
 msgid "Case folding"
-msgstr "Považovat malá a velká písmena za tatáž"
+msgstr "Nerozlišovat mezi malými a velkými písmeny"
 
 msgid "Client sees lowercase, server sees uppercase"
 msgstr "Klient vidí malá písmena, server velká"
 
 msgid "Client sees uppercase, server sees lowercase"
-msgstr "Klient uvidí velká písmena, server malá"
+msgstr "Klient vidí velká písmena, server malá"
 
 msgid "Comment"
 msgstr "Komentář"
@@ -55,19 +55,19 @@ msgid "Edit share"
 msgstr "Upravit sdílení"
 
 msgid "Enable"
-msgstr "Povolit"
+msgstr "Zapnout"
 
 msgid "Enable Time Machine support for this share."
-msgstr "Pro toto sdílení povolit podporu aplikace Time Machine"
+msgstr "Pro toto sdílení zapnout podporu aplikace Time Machine."
 
 msgid "Enable user home directories."
-msgstr "Povolit domovské složky uživatelů."
+msgstr "Umožnit uživatelům používání domovských složek."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Zapnuto"
 
 msgid "Extra options"
-msgstr "Další možnosti"
+msgstr "Rozšířené předvolby"
 
 msgid "General settings"
 msgstr "Obecná nastavení"
@@ -82,19 +82,19 @@ msgid "Guests only have read access by default."
 msgstr "Ve výchozím nastavení mohou hosté pouze číst."
 
 msgid "Hide dot files"
-msgstr "Nezobrazovat skryté soubory (s názvy začínajícími tečku)"
+msgstr "Nezobrazovat skryté soubory (s názvy začínajícími tečkou)"
 
 msgid "Home directories"
 msgstr "Domovské složky"
 
 msgid ""
 "If this option is set, then a password is required to access the share."
-msgstr "Je-li tato volba nastavena, je pro přístup ke sdílení vyžadováno heslo."
+msgstr "Pokud je tato volba nastavená, bude pro přístup ke sdílení vyžadováno heslo."
 
 msgid ""
 "If this option is set, then users may not create or modify files in the "
 "share."
-msgstr "Je-li tato volba nastavena, pak uživatelé nebudou na sdílení moci vytvářet či upravovat soubory."
+msgstr "Je-li tato volba nastavená, pak uživatelé nebudou na sdílení moci vytvářet či upravovat soubory."
 
 msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
@@ -118,7 +118,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Další podrobnosti naleznete v <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>manuálové stránce</a>."
 
 msgid "Quota"
 msgstr "Kvóta"
@@ -127,7 +127,7 @@ msgid "Read only"
 msgstr "Pouze pro čtení"
 
 msgid "Set read only."
-msgstr "Nastavit pouze pro čtení"
+msgstr "Nastavit pouze pro čtení."
 
 msgid "Settings"
 msgstr "Nastavení"
