--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/es_ES/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/es_ES/openmediavault-netatalk.po
@@ -4,15 +4,15 @@
 # 
 # Translators:
 # jmcainzos <jmcainzos@vodafone.es>, 2012
-# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2014
+# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2014,2016
 # Volker <votdev@gmx.de>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-09-24 14:25+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,7 +66,7 @@ msgid "Enable user home directories."
 msgstr "Habilitar Directorios Home de Usuario."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Habilitado"
 
 msgid "Extra options"
 msgstr "Opciones Extra"
@@ -120,7 +120,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Por favor, revise <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>manual page</a> para más detalles."
 
 msgid "Quota"
 msgstr "Cúota"
