--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ja_JP/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ja_JP/openmediavault-netatalk.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
-# Toshihiro Kan <kansuke4649@gmail.com>, 2014
+# Toshihiro Kan <kansuke4649@gmail.com>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-09-26 05:57+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,7 +64,7 @@ msgid "Enable user home directories."
 msgstr "ユーザーホームディレクトリを有効にします。"
 
 msgid "Enabled"
-msgstr ""
+msgstr "有効"
 
 msgid "Extra options"
 msgstr "その他のオプション"
@@ -118,7 +118,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "より詳しいことは <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>マニュアルページ</a>を参照してください。 "
 
 msgid "Quota"
 msgstr "クォータ"
