--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/uk_UK/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/uk_UK/openmediavault-netatalk.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-09-29 05:13+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,7 +64,7 @@ msgid "Enable user home directories."
 msgstr "Увімкнути домашній каталог користувача."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Увімкнено"
 
 msgid "Extra options"
 msgstr "Додаткові опції"
@@ -118,7 +118,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Будь ласка, відвідайте <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>сторінку</a>для отримання більш докладної інформації."
 
 msgid "Quota"
 msgstr "Квота"
