--- a/deb/openmediavault-route/usr/share/openmediavault/locale/cs_CZ/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/cs_CZ/openmediavault-route.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-01 08:05+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,25 +20,25 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "Add static route"
-msgstr "Přidat statické směrování"
+msgstr "Přidat statickou trasu"
 
 msgid "Comment"
 msgstr "Komentář"
 
 msgid "Edit static route"
-msgstr "Upravit statické směrování"
+msgstr "Upravit statickou trasu"
 
 msgid "Gateway"
 msgstr "Brána"
 
 msgid "Gateway used to reach the above network address."
-msgstr "Brána použitá pro dosažení výše uvedené síťové adresy."
+msgstr "Brána přes kterou je dosažitelná výše uvedená síťová adresa."
 
 msgid "IP or network address."
-msgstr "IP nebo síťová adresa."
+msgstr "IP adresa stroje nebo sítě."
 
 msgid "Network"
 msgstr "Síť"
 
 msgid "Static Routes"
-msgstr "Statické směrování"
+msgstr "Statické trasy"
