--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/da_DA/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/da_DA/openmediavault-shairport.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2014-2015
+# Stefan Thrane Overby <stoverby@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-24 19:04+0200\n"
-"PO-Revision-Date: 2016-09-24 17:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-09-26 20:42+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/votdev/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,4 +45,4 @@ msgstr "Shairport"
 msgid ""
 "The name the service will advertise to clients. Leave this field empty to "
 "use the hostname by default."
-msgstr ""
+msgstr "Navnet som tjenesten vil annoncere til klienter. Lad dette være tomt for at bruge værtsnavnet som standard."
