--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-03 20:38+0200\n"
-"PO-Revision-Date: 2016-10-03 18:38+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-04 11:42+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -853,7 +853,7 @@ msgid "Device information"
 msgstr "Інформацію про пристрій "
 
 msgid "Device is being used outside design parameters"
-msgstr ""
+msgstr "Прилад використовується за межами проектних параметрів"
 
 msgid "Device model"
 msgstr "Модель пристрою"
@@ -862,7 +862,7 @@ msgid "Device properties"
 msgstr "Властивості пристрою"
 
 msgid "Device was used outside of design parameters in the past"
-msgstr ""
+msgstr "В минулому прилад був використаний за межами проектних параметрів"
 
 msgid "Device(s)"
 msgstr "Пристрій(ої)"
@@ -3201,7 +3201,7 @@ msgid "Store DOS attributes"
 msgstr "Зберігати атрибути DOS"
 
 msgid "Stripe"
-msgstr ""
+msgstr "Смуга"
 
 msgid "Success"
 msgstr "Вдало"
